# msplat

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  package.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
cli/: msplat.cpp
core/include/: input_data.hpp  kdtree_tensor.hpp  loaders.hpp  metal_tensor.hpp  model.hpp  msplat.hpp  msplat_api.hpp  msplat_c_api.h  random_iter.hpp  ssim.hpp
core/metal/: bindings.h  msplat_metal.metal  msplat_metal.mm
core/src/: input_data.cpp  model.cpp  msplat_api.mm  ssim.cpp
core/src/loaders/: image_io.cpp  load_colmap.cpp  load_nerfstudio.cpp  load_ply.cpp  load_polycam.cpp  save_gaussians.cpp
demo/: Package.swift
demo/Sources/: DemoApp.swift
examples/: train_garden.py
python/: bindings.cpp
python/msplat/: __init__.py  _core.pyi  cli.py
scripts/: build-xcframework.sh
swift/: Package.swift
swift/Sources/Msplat/: GaussianDataset.swift  GaussianTrainer.swift  TrainingConfig.swift  TrainingStats.swift
swift/Tests/: MsplatTests.swift
tests/: test_msplat.py
tests/web/: helpers.mjs  integration.test.mjs  smoke.test.mjs  validator.test.mjs
tests/web/fixtures/: fake-colmap.mjs  fake-msplat.mjs
web/: dev.mjs  server.mjs  worker.mjs
web/public/: app.css
web/src/: archive.mjs  artifacts.mjs  config.mjs  dataset.mjs  db.mjs  logger.mjs  logs.mjs  pages.mjs  presets.mjs  server-app.mjs  utils.mjs  worker-app.mjs
